--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/react-simple-maps": "^3.0.6",
     "argon2": "^0.31.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.9",
@@ -85,6 +86,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.9.6",
     "npm": "^11.3.0",
+    "postcss": "^8.5.3",
     "postprocessing": "^6.37.3",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
@@ -111,6 +113,7 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "usehooks-ts": "^3.1.1",
@@ -133,7 +136,6 @@
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.5.3",
     "prisma": "^5.4.2",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2"
   },
   "prisma": {
