--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node fix-build-issue.js && node create-symlinks.js && next build",
     "start": "next start",
     "lint": "next lint",
     "server": "node server.js",
