--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/react-visually-hidden": "^1.2.0",
     "@react-spring/three": "^9.7.5",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^9.1.2",
-    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/postprocessing": "^2.15.11",
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-virtual": "^3.13.6",
@@ -115,7 +115,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.176.0",
+    "three": "^0.158.0",
     "usehooks-ts": "^3.1.1",
     "uuid": "^9.0.1",
     "vaul": "^1.1.2",
@@ -138,5 +138,10 @@
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
+  "resolutions": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "three": "^0.158.0"
   }
 }
